--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Write google-services.json
         run: |
           mkdir -p app
-          cat <<EOF > app/google-services.json
+          cat <<'EOF' > app/google-services.json
           ${{ secrets.GOOGLE_SERVICES_JSON }}
           EOF
 
